k8s/next-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-server
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: next-server
          image: ghcr.io/whyredfire/ls-next-server:f2c2515adfa41210ab9b169193702df79adbc0b9
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
