k8s/next-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
